// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentThoughtStream > Snapshots > all complete 1`] = `
<div>
  <div
    aria-label="Stav agent\\u016F"
    class="fixed top-20 left-1/2 -translate-x-1/2 z-50 animate-in slide-in-from-top-4 duration-300"
    data-testid="agent-thought-stream"
    role="status"
  >
    <div
      class="bg-surface-elevated/90 backdrop-blur-sm text-primary px-4 py-2 rounded-lg shadow-lg"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300"
          data-status="complete"
          data-testid="agent-supervisor"
        >
          <span
            class="text-agent-complete animate-in fade-in duration-300"
          >
            ✓
          </span>
          <span
            class="text-agent-supervisor"
          >
            🧠 Supervisor - Klasifikuji dotaz
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300"
          data-status="complete"
          data-testid="agent-drug_agent"
        >
          <span
            class="text-agent-complete animate-in fade-in duration-300"
          >
            ✓
          </span>
          <span
            class="text-agent-drug"
          >
            💊 Drug Agent - Prohledávám SÚKL
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300"
          data-status="complete"
          data-testid="agent-pubmed_agent"
        >
          <span
            class="text-agent-complete animate-in fade-in duration-300"
          >
            ✓
          </span>
          <span
            class="text-agent-pubmed"
          >
            🌍 PubMed Agent - Prohledávám PubMed
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300"
          data-status="complete"
          data-testid="agent-guidelines_agent"
        >
          <span
            class="text-agent-complete animate-in fade-in duration-300"
          >
            ✓
          </span>
          <span
            class="text-agent-guidelines"
          >
            📖 Guidelines Agent - Prohledávám ČLS JEP
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300"
          data-status="complete"
          data-testid="agent-synthesizer"
        >
          <span
            class="text-agent-complete animate-in fade-in duration-300"
          >
            ✓
          </span>
          <span
            class="text-agent-synthesizer"
          >
            📝 Synthesizer - Formátuji odpověď
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AgentThoughtStream > Snapshots > mixed states 1`] = `
<div>
  <div
    aria-label="Stav agent\\u016F"
    class="fixed top-20 left-1/2 -translate-x-1/2 z-50 animate-in slide-in-from-top-4 duration-300"
    data-testid="agent-thought-stream"
    role="status"
  >
    <div
      class="bg-surface-elevated/90 backdrop-blur-sm text-primary px-4 py-2 rounded-lg shadow-lg"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300"
          data-status="complete"
          data-testid="agent-supervisor"
        >
          <span
            class="text-agent-complete animate-in fade-in duration-300"
          >
            ✓
          </span>
          <span
            class="text-agent-supervisor"
          >
            🧠 Supervisor - Klasifikuji dotaz
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300"
          data-status="running"
          data-testid="agent-drug_agent"
        >
          <div
            class="flex gap-1"
          >
            <span
              class="h-2 w-2 bg-primary rounded-full animate-bounce shadow-lg shadow-primary/50"
              style="animation-delay: 0ms;"
            />
            <span
              class="h-2 w-2 bg-primary rounded-full animate-bounce shadow-lg shadow-primary/50"
              style="animation-delay: 150ms;"
            />
            <span
              class="h-2 w-2 bg-primary rounded-full animate-bounce shadow-lg shadow-primary/50"
              style="animation-delay: 300ms;"
            />
          </div>
          <span
            class="font-semibold text-agent-drug"
          >
            💊 Drug Agent - Prohledávám SÚKL
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300 opacity-50"
          data-status="idle"
          data-testid="agent-pubmed_agent"
        >
          <span
            class="h-2 w-2 bg-agent-idle rounded-full"
          />
          <span
            class="text-agent-pubmed"
          >
            🌍 PubMed Agent - Prohledávám PubMed
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300 opacity-50"
          data-status="idle"
          data-testid="agent-guidelines_agent"
        >
          <span
            class="h-2 w-2 bg-agent-idle rounded-full"
          />
          <span
            class="text-agent-guidelines"
          >
            📖 Guidelines Agent - Prohledávám ČLS JEP
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300 opacity-50"
          data-status="idle"
          data-testid="agent-synthesizer"
        >
          <span
            class="h-2 w-2 bg-agent-idle rounded-full"
          />
          <span
            class="text-agent-synthesizer"
          >
            📝 Synthesizer - Formátuji odpověď
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AgentThoughtStream > Snapshots > single running agent 1`] = `
<div>
  <div
    aria-label="Stav agent\\u016F"
    class="fixed top-20 left-1/2 -translate-x-1/2 z-50 animate-in slide-in-from-top-4 duration-300"
    data-testid="agent-thought-stream"
    role="status"
  >
    <div
      class="bg-surface-elevated/90 backdrop-blur-sm text-primary px-4 py-2 rounded-lg shadow-lg"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300"
          data-status="running"
          data-testid="agent-supervisor"
        >
          <div
            class="flex gap-1"
          >
            <span
              class="h-2 w-2 bg-primary rounded-full animate-bounce shadow-lg shadow-primary/50"
              style="animation-delay: 0ms;"
            />
            <span
              class="h-2 w-2 bg-primary rounded-full animate-bounce shadow-lg shadow-primary/50"
              style="animation-delay: 150ms;"
            />
            <span
              class="h-2 w-2 bg-primary rounded-full animate-bounce shadow-lg shadow-primary/50"
              style="animation-delay: 300ms;"
            />
          </div>
          <span
            class="font-semibold text-agent-supervisor"
          >
            🧠 Supervisor - Klasifikuji dotaz
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300 opacity-50"
          data-status="idle"
          data-testid="agent-drug_agent"
        >
          <span
            class="h-2 w-2 bg-agent-idle rounded-full"
          />
          <span
            class="text-agent-drug"
          >
            💊 Drug Agent - Prohledávám SÚKL
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300 opacity-50"
          data-status="idle"
          data-testid="agent-pubmed_agent"
        >
          <span
            class="h-2 w-2 bg-agent-idle rounded-full"
          />
          <span
            class="text-agent-pubmed"
          >
            🌍 PubMed Agent - Prohledávám PubMed
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300 opacity-50"
          data-status="idle"
          data-testid="agent-guidelines_agent"
        >
          <span
            class="h-2 w-2 bg-agent-idle rounded-full"
          />
          <span
            class="text-agent-guidelines"
          >
            📖 Guidelines Agent - Prohledávám ČLS JEP
          </span>
        </div>
        <div
          class="flex items-center gap-2 font-mono text-xs transition-opacity duration-300 opacity-50"
          data-status="idle"
          data-testid="agent-synthesizer"
        >
          <span
            class="h-2 w-2 bg-agent-idle rounded-full"
          />
          <span
            class="text-agent-synthesizer"
          >
            📝 Synthesizer - Formátuji odpověď
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
